# mr-mime

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
generator/: Cargo.toml  mime.types
generator/src/: main.rs
src/: lib.rs  segments.rs
