[package]
name = "mr-mime"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "A no_std MIME type library for Rust"
repository = "https://github.com/notgull/mr-mime"
license = "MIT OR Apache-2.0"
keywords = ["mime", "networking"]
homepage = "https://github.com/notgull/mr-mime#readme"
documentation = "https://docs.rs/mr-mime"

[dependencies]
intern-str = { version = "0.1", default-features = true }
memchr = { version = "2.5.0", default-features = false }

[workspace]
members = ["generator"]

[features]
default = ["std"]
alloc = []
std = ["alloc"]
